# Jailbreaking_by_Mathematical_Processing

./: .gitignore  README.md  TODO.md  TODO_old.md  experiment_test.py  final_update_paper.py  old_test.py  progress_report.md  pyproject.toml  records and explanations.md  test.py
paper/: base.tex  old_base.tex
src/: __init__.py
src/clas_jailbreaking_attack_track/: README.md  jailbreak_track.ipynb  mutation_utils.py
src/clas_jailbreaking_evaluation/: constants.py  jailbreak.py  jailbreak_track.ipynb  prompt_develop.jsonl  score_calculator.py
src/data/: README.md  constants.py
src/data_processing/: data_processor.py
src/evaluation/: README.md  __init__.py  base_evaluator.py  constants.py  evaluator.py  factory.py
src/experiment/: README.md  __init__.py  constants.py  experiment.py  task.py
src/input_and_output/: all_input_prompts.jsonl  history_non_llm_results.jsonl  input_prompts.jsonl  non_llm_results.jsonl  output_prompts.jsonl  test_input_prompts.jsonl  test_output_prompts.jsonl  test_results.jsonl
src/llm_util/: __init__.py  constants.py  llm_client.py  llm_model.py  llm_service.py
src/llm_utils/: README.md  __init__.py  base_llm_service.py  claude_service.py  constants.py  google_service.py  llm_model.py  llm_service_factory.py  local_lm_service.py  openai_service.py
src/prompt_processor/: README.md  __init__.py  base_processor.py  constants.py  llm_processor.py  non_llm_processor.py  processor_factory.py  processor_type.py
src/utils/: README.md  __init__.py  constants.py  generate_datasets.py  generate_full_table.py  logger.py  (+2 more)
(+120 files in other folders)
