[tool.poetry]
name = "prompt_processing_by_maths_for_LLM_jailbreaking"
version = "0.1.0"
description = "A framework for running experiments with LLMs"
authors = ["Project Team <example@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = ">=0.1.0"
langchain-core = ">=0.1.0"
langchain-community = ">=0.1.0"
openai = ">=1.0.0"
requests = ">=2.31.0"
numpy = ">=1.20.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
black = ">=21.5b2"
flake8 = ">=3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
